samples/_failures_safe/1761665172_31dd96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42f59e6f.c:151: error: expected ‘;’, ‘,’ or ‘)’ at end of input
